<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_7" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_8" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_9" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_divide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_divide" />
    </TableRow>

    <TableRow>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_4" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_5" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_6" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_multiply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_multiply" />
    </TableRow>

    <TableRow>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_3" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_minus" />

    </TableRow>

    <TableRow>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:text="@string/_0" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_point" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_plus" />
    </TableRow>


    <TableRow>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_equals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="4"
            android:text="@string/_equals" />
    </TableRow>

</TableLayout>